--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -13,6 +13,9 @@
     <a href="explore/index.html">Explore</a>
   </li>
   <li>
+    <a href="explore-challenge/index.html">Explore A4 Challenge</a>
+  </li>
+  <li>
     <a href="notifications.html">Notifications</a>
   </li>
   <li>
