--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -7,13 +7,10 @@
 <body>
 <ul>
   <li>
-    <a href="home.html">Home</a>
+    <a href="HomeScreen/index.html">Home</a>
   </li>
   <li>
     <a href="explore/index.html">Explore</a>
-  </li>
-  <li>
-    <a href="explore-challenge/index.html">Explore A4 Challenge</a>
   </li>
   <li>
     <a href="notifications.html">Notifications</a>
