--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -16,16 +16,18 @@
   <span class="wd-author-avatar"><img src="../elon_musk.jpeg"></span>
   <div class="wd-tuit-body">
     <div class="wd-author-name"> Robert Zubrin </div>
-    <div class="wd-author-handle"> @robert_zubrin . Jul 31</div>
+    <span><i class="fa fa-check-circle wd-check-mark"></i></span>
+    <span class="wd-author-handle"> @robert_zubrin &#183; Jul 31</span>
+    <span class="wd-three-dots">&#183;&#183;&#183;</span>
     <div class="wd-tuit-content">
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
       Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </div>
     <div class="wd-tuit-img-body">
-      <img class="wd-tuit-img" src="../explore/college.jpeg"/><br>
+      <img class="wd-tuit-img wd-tuit-image-top-border" src="../explore/college.jpeg"/><br>
       <div class="wd-tuit-img-description">
         <p class="wd-tuit-img-title">Lorem Ipsum is simply dummy text of the printing</p>
-        <p class="wd-tuit-img-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+        <p class="wd-tuit-img-text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
       </div>
     </div>
   </div>
@@ -58,7 +60,7 @@
   <span class="wd-author-avatar"><img src="../atari.png"></span>
   <div class="wd-tuit-body">
     <div class="wd-author-name"> Vibhore Maheshwari </div>
-    <div class="wd-author-handle"> @vibhore_maheshwari . Aug 12</div>
+    <div class="wd-author-handle"> @vibhore_maheshwari &#183; Aug 12</div>
     <div class="wd-tuit-content">
       There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
     </div>
