--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -24,7 +24,7 @@
       Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </div>
     <div class="wd-tuit-img-body">
-      <img class="wd-tuit-img wd-tuit-image-top-border" src="../explore/college.jpeg"/><br>
+      <img class="wd-tuit-img wd-tuit-image-top-border" src="../explore-past/college.jpeg"/><br>
       <div class="wd-tuit-img-description">
         <p class="wd-tuit-img-title">Lorem Ipsum is simply dummy text of the printing</p>
         <p class="wd-tuit-img-text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
